--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,10 @@
+lsl (1.0.1) unstable; urgency=medium
+
+  [ Ali Riza Keskin ]
+  * bug fixes and new features
+
+ -- Ali Riza Keskin <aliriza.keskin@pardus.org.tr>  Tue, 24 Sep 2024 12:29:42 +0300
+
 lsl (1.0) unstable; urgency=medium
 
   [ Ali Riza Keskin ]
