--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,10 @@
+lsl (1.0.2) unstable; urgency=medium
+
+  * bug fixes and new features
+  * 
+
+ -- Ali Riza Keskin <aliriza.keskin@pardus.org.tr>  Mon, 21 Jul 2025 15:28:01 +0000
+
 lsl (1.0.1) unstable; urgency=medium
 
   [ Ali Riza Keskin ]
